tests/integration/tests/macros/ui/http_error/fail/missing_message.rs
use reinhardt::HttpError;

#[derive(Debug, HttpError)]
enum ApiError {
	#[http_error(status = BAD_REQUEST)]
	Invalid,
}

fn main() {}
